@@ -7,13 +7,14 @@ import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Scanner;
 
 
 public class SourceReader {
-    String userName;
-    int numberOfPages;
-    String group;
+    private final String userName;
+    private final int numberOfPages;
+    private final String group;
 
     public SourceReader(String userName, int numberOfPages, String group) {
         this.userName = userName;
@@ -21,34 +22,43 @@ public class SourceReader {
         this.group = group;
     }
 
-    public void readSource() throws IOException, InterruptedException, URISyntaxException {
+    public void read() throws IOException, InterruptedException, URISyntaxException {
+        List<String> linkList = generateLinkList();
+        StringBuilder content = new StringBuilder();
+
+        for (int i = 0; i < linkList.size(); i++) {
+
+            readSource(linkList, i, content);
+        }
+
+        Path path = Path.of(String.format("src/%s.txt", group));
+        Files.writeString(path, content);
+    }
+
+    private ArrayList<String> generateLinkList() {
         ArrayList<String> linkList = new ArrayList<>();
         for (int i = 1; i <= numberOfPages; i++) {
             linkList.add(String.format(
                     "https://github.com/%s?page=%d&tab=%s",
                     userName, i, group));
         }
+        return linkList;
+    }
 
-        StringBuilder content = new StringBuilder();
-        for (int i = 0; i < linkList.size(); i++) {
+    private void readSource(List<String> linkList, int i, StringBuilder content)
+            throws InterruptedException, IOException, URISyntaxException {
+        URLConnection connection;
+        try {
+            connection = new URI(linkList.get(i)).toURL()
+                    .openConnection();
+            scanConnection(content, connection);
+        } catch (Exception ex) {
+            System.out.printf("%d pages has been read, sleeping for 1 min to prevent from HTTP 429 (too many requests).%n", i);
+            Thread.sleep(60000);
 
-            URLConnection connection;
-            try {
-//                connection = new URL(linkList.get(i)).openConnection();
-                connection = new URI(linkList.get(i)).toURL().openConnection();
-                scanConnection(content, connection);
-            } catch (Exception ex) {
-                System.out.printf("%d pages has been read, sleeping for 1 min to prevent from HTTP 429 (too many requests).%n", i);
-                Thread.sleep(60000);
-
-//                connection = new URL(linkList.get(i)).openConnection();
-                connection = new URI(linkList.get(i)).toURL().openConnection();
-                scanConnection(content, connection);
-            }
+            connection = new URI(linkList.get(i)).toURL().openConnection();
+            scanConnection(content, connection);
         }
-
-        Path path = Path.of(String.format("src/%s.txt", group));
-        Files.writeString(path, content);
     }
 
     private void scanConnection(StringBuilder content, URLConnection connection) throws IOException {
